Done with Assignment

--- a/index.html
+++ b/index.html
@@ -1,1 +1,15 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html/>
+<html lang="en">
+   <head>
+    <title> Link Tag with href</title>
+   </head> 
+   <body>
+    <h1><a href="https://flatironschool.com">Flatiron School</a></h1>
+    <p1>Flatiron School offers a variety of program options to accommodate students’ busy schedules.
+
+        15 week intensive or 20, 40, or 60 weeks flexible online pace options.
+        In-person or online programs.
+        Concentrations in software engineering, cybersecurity, data science, or product design.</p1>
+   </body>
+</html>
